2005-11-08  Adam Jocksch  <ajocksch@redhat.com>

	* SourceViewWidget.java: Removed excess import.
	
	* testfiles/test3.cpp: Added a #define.

2005-11-07  Adam Jocksch  <ajocksch@redhat.com>

	* SourceBuffer.java (hasInlineCode): Added debugging output.
	* SourceViewWidget.java (refresh): Made margin wider to include inline
	instance markers
	(drawMargin): Fixed bug where margin was only appearing in shades
	of grey, also made changes to reflect above change to refresh.
	* SourceWindow.java (SourceWindow): Now sets current line, also added
	hack to get around eclipse ecj 3.1 compiler warnings.
	* dom/DOMLine.java (addInlineInstance): Now sets HAS_INLINE_INST
	attribute to "true".
	
	* StackLevel.java: Added comments to methods/members
	(StackLevel): Introduced new constructor that allows partial/multi
	-line "current line"s.
	(getColStart): Added.
	(setColStart): Ditto.
	(getColEnd): Ditto.
	(setColEnd): Ditto.
	(getEndLine): Ditto.
	(setEndLine): Ditto.
	(getLine): Refactored to getStartingLine.
	* SourceWindow.java: Refactored to reflect change of getLine to 
	getStartingLine in StackLevel.
	
	* SourceBuffer.java (hasInlineCode): Removed debug output.
	(init): Now automatically calls getCurrentLine.
	(setScope): Ditto.
	(setCurrentLine): Made private, now takes starting/ending
	lines/columns.
	* SourceViewWidget (setCurrentLine): Removed.
	* SourceWindow (selectionChangedEvent): Removed call to setCurrentLine
	in SourceBuffer.
	* StackLevel.java (StackLevel): Now inializes column variables.

	* testfiles/common.h: Added.
	* testfiles: Changed files so that they could all be compiled into
	an executable.

2005-11-04  Rick Moseley  <rmoseley@redhat.com>
	* dom/DOMTestDOMFrysk.java: added test for DOMImage.getFunction()
					(to be added to JUnit also)

2005-11-03  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Now takes array of image paths.
	(createActions): Now looks for images in multiple directories.
	(createSearchBar): Ditto.